#
# MIT License
#
# (C) Copyright 2025 Hewlett Packard Enterprise Development LP
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
# OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
# ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
# OTHER DEALINGS IN THE SOFTWARE.
#
[tool.poetry]
name = "csm-api-client"
version = "2.3.5"
description = "Python client library for CSM APIs"
authors = [
    "Ryan Haasken <ryan.haasken@hpe.com>",
    "Eli Kamin <eli.kamin@hpe.com>",
    "Jack Stanek <jack.stanek@hpe.com>",
    "Pat Tovo <pat.tovo@hpe.com>",
    "Annapoorna S <annapoorna.s@hpe.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Cray-HPE/sat"
packages = [{include = "csm_api_client"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.21.0"
inflect = ">=0.2.5"
kubernetes = ">=22.0.0"
PyYAML = "<7.0"
requests = "<3.0"
requests-oauthlib = "^1.3.1"
cray-product-catalog = "^2.4.1"
semver = "^3.0.2"

[tool.poetry.group.dev.dependencies]
nose2 = {version = "^0.12.0", extras = ["coverage_plugin"]}
mypy = "^1.12.0"
types-PyYAML = "<6.0"
types-oauthlib = "^3.2.0"
types-requests = "<3.0"
boto3-stubs = {version = "^1.21.0", extras = ["s3"]}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "algol60"
url = "https://artifactory.algol60.net/artifactory/csm-python-modules/simple/"
priority = "supplemental"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
files = "csm_api_client"
exclude = "^tests/.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
